Fix table for Annotation and Misc sub-table alignment and widths

--- a/dos33.html
+++ b/dos33.html
@@ -367,21 +367,25 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
     </tr>
     <tr>
         <td>Annotation</td>
-        <td style='padding:0px;'>Modern commentary by me.
-<br>References to Code and Data are color-coded:
+        <td style='padding:0px;'>Modern commentary by me.<br>
 <br>
-<br>
-<table class='rows'>
-<tr class="rows"><td><a    class='dumb' >dumb        </a>   </td><td> How NOT to Design a File System or How NOT to Design an Operating System</td></tr>
-<tr class="rows"><td><a    class='mem'  >wastes      </a>   </td><td># bytes due to inefficient code </td></tr>
-<tr class="rows"><td><a    class='disk' >disk        </a>   </td><td> unitialized data, wasted sector</td></tr>
-<tr class="rows"><td><a    class='magic'>magic number</a>   </td><td> Hard-Coded constant that the reader is assumed to know what it means</td></tr>
-<tr class="rows"><td><span class='todo' >TODO        </span></td><td> Unanswered questions           </td></tr>
-<tr class='rows'><td><span class='code' >CODE        </span></td><td> Code snippet                   </td></tr>
-<tr class='rows'><td><span class='macro'>MACRO       </span></td><td> Conditional code               </td></tr>
-</table>
-
-</td>
+        <table width='100%'>
+            <tr class="rows"><td style='width:15%'><a    class='dumb' >dumb        </a>   </td><td> How NOT to Design a File System, or <br> How NOT to Design an Operating System</td></tr>
+            <tr class="rows"><td style='width:15%'><a    class='mem'  >wastes      </a>   </td><td># bytes wasted due to bad architecture or inefficient code</td></tr>
+            <tr class="rows"><td style='width:15%'><a    class='disk' >disk        </a>   </td><td> Unitialized data, wasted sector  </td></tr>
+            <tr class="rows"><td style='width:15%'><a    class='magic'>magic number</a>   </td><td> Hard-Coded constant that the reader is assumed to know what it means</td></tr>
+            <tr class="rows"><td style='width:15%'><span class='todo' >TODO        </span></td><td> Unanswered question(s)           </td></tr>
+            <tr class='rows'><td style='width:15%'><span class='code' >CODE        </span></td><td> Code snippet                     </td></tr>
+        </table>
+        </td>
+    </tr>
+    <tr>
+        <td>Misc.</td>
+        <td style='padding:0px;'>
+            <table width='100%'>
+                <tr class='rows'><td style='width:15%'><span class='macro'>MACRO       </span></td><td> Conditional code               </td></tr>
+            </table>
+        </td>
     </tr>
 </table>
 </div>
