Fix spelling Requires

--- a/dos33.html
+++ b/dos33.html
@@ -310,7 +310,7 @@ span.patch {
 
     // ---------- Implementation ----------
     /*
-        Requries 2 css styles
+        Requires 2 css styles
 
         .fixed    { position: fixed   ; background: #FFF; } // active sticky header
         .sticky   { position: relative; background: #FFF; } // designate this header as sticky
