Update comment about sticky format

--- a/dos33.html
+++ b/dos33.html
@@ -324,9 +324,9 @@ span.patch {
         /*
             var Sticky =
             {
-                height : 0,        // original height
-                top    : 0,        // original position
-                elem   : undefined // original div element
+                height : 0,  // original height
+                top    : 0,  // original position
+                element: div // our new div parent of the original div sticky header
             };
         */
         var _aHeaders = []; // array of Sticky objects
