--- a/dos33.html
+++ b/dos33.html
@@ -1674,13 +1674,13 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 <hr>                    178 ;                                                           ; === Page <a class='page' name='page19'>19</a> ===
                     179 SP1         JSR GNBC        ; GO GET NON-BLANK CHAR
                     180             BNE SP2         ; BR IF NOT COMMA OR CR
-                    181             CMP #$8D        ; IF CHAR IS COMMA
+                    181             CMP #$<span class='n'>8D</span>        ; IF CHAR IS COMMA              ; <a class='magic' name='_'>magic number</a> CR_HI
                     182             BNE SP1         ; THEN GO GET CHAR
                     183 ;
                     184             LDX CMDNO       ; OPTIONS INPUT = I
                     185             LDA INOPTS      ; ALLOW OPTS = A
-                    186             ORA CMDSTB+1,X  ; IF (A OR I)
-                    187             EOR CMDSTB+1,X  XOR A NOT =0 THEN
+                    186             ORA CMDSTB+<span class='n'>1</span>,X  ; IF (A OR I)
+                    187             EOR CMDSTB+<span class='n'>1</span>,X  XOR A NOT =0 THEN
                     188             BNE SERR1       ; WE HAVE UNALLOWED OPTIONS
                     189 ;
                     190             LDX TEMP1A      ; IF THIS IS PASS2
@@ -1690,14 +1690,14 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     194             BNE SP1         ; GO DO PASS 2
                     195 ;
                     196 SP2         LDX #OPT1L      ; COMPARE CHAR HAVE WITH
-                    197 SP3         CMP OPTAB1-1,X  ; CHARS IN OPT TABLE
+                    197 SP3         CMP OPTAB1-<span class='n'>1</span>,X  ; CHARS IN OPT TABLE
                     198             BEQ SP4         ; IF FOUND CONTINUE,
                     199             DEX             
                     200             BNE SP3         ; IF NOT FOUND
                     201 SERR2A      BEQ SERR2       ; THEN SYNTAX ERROR
                     202 ;
-                    203 SP4         LDA OPTAB2-1,X  ; IF CORRESPONDING OP TAB 2 IS
-                    204             BMI SP8         ; MINUS THEN IT MONITOR BITS
+                    203 SP4         LDA <a class='v' href='#OPTAB2'>OPTAB2</a>-<span class='n'>1</span>,X  ; IF CORRESPONDING OP TAB 2 IS
+                    <a class='line' name='CMDSCAN.204'>204</a>             BMI SP8         ; MINUS THEN IT MONITOR BITS    ; C,I,O were all flagged with +$80, see <a class='v' href='#OPTAB2'>OPTAB2</a>
                     205             ORA INOPTS      
                     206             STA INOPTS      
                     207             DEX             
@@ -1711,17 +1711,17 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     215             ASL A           
                     216             TAY             
                     217 ;
-                    218             LDA CNUM+1      ; IF RESULT NUM HI IS
+                    218             LDA CNUM+<span class='n'>1</span>      ; IF RESULT NUM HI IS
                     219             BNE SP5         ; GT 0, THEN GT LOW RANGE
                     220             LDA CNUM        ; TEST RESULT LOW
                     221             CMP OPTAB3,Y    ; WITH LOW RANGE (LOW)
                     222             BCC SERR3       ; BR IF RESULT &lt; LR
-                    223             LDA CNUM+1      
-                    224 SP5         CMP OPTAB3+3,Y  
+                    223             LDA CNUM+<span class='n'>1</span>      
+                    224 SP5         CMP OPTAB3+<span class='n'>3</span>,Y  
                     225             BCC SP6         ; BR IF LESS
                     226 SERR3A      BNE SERR3       ; BR IF GREATER
                     227             LDA CNUM        
-                    228             CMP OPTAB3+2,Y  
+                    228             CMP OPTAB3+<span class='n'>2</span>,Y  
                     229             BCC SP6         ; BR IF LESS
                     230             BNE SERR3A      ; BR IF GREATER
                     231 ;
@@ -1731,24 +1731,24 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     235             LSR A           
                     236             TAY             
                     237 ;
-                    238             LDA CNUM+1      ; STORE THE RESULT
-                    239             STA CUROPT+1,Y
+                    238             LDA <a class='v' href='#CNUM'>CNUM</a>+<span class='n'>1</span>      ; STORE THE RESULT
+                    <a class='line' name='CMDSCAN.239'>239</a>             STA <a class='v' href='#CUROPT'>CUROPT</a>+<span class='n'>1</span>,Y
                     240             LDA CNUM
-<hr>                    241             STA CUROPT,Y                                    ; === Page <a class='page' name='page20'>20</a> ===
-                    242 SP7         JMP SP1         ; GO FOR NEXT OPT
+<hr>                    241             STA <a class='v' href='#CUROPT'>CUROPT</a>,Y                                    ; === Page <a class='page' name='page20'>20</a> ===
+                    242 SP7         JMP <a class='x' href='#SP1'>SP1</a>         ; GO FOR NEXT OPT
                     243 ;
-                    244 SP8         EQU *           ; MONITOR REQ
+                    244 SP8         EQU *           ; MONITOR REQ                   ; Have 'C', 'I', or 'O'
                     245             PHA             ; SAVE TYPE REQ
-                    246             LDA #CIO        ; SET OPTION OF CIO
-                    247             ORA INOPTS
-                    248             STA INOPTS
+                    246             LDA #<a class='e' href='#CIO'>CIO</a>        ; SET OPTION OF CIO
+                    247             ORA <a class='v' href='#INOPTS'>INOPTS</a>
+                    248             STA <a class='v' href='#INOPTS'>INOPTS</a>
                     249             PLA             ; RESTOERE REQ
-                    250             AND #$7F        ; CLEAR CIO
-                    251             ORA IMBITS      ; OR WITH PREV IMBITS
-                    252             STA IMBITS
-                    253             BNE SP7         ; GO FOR NEXT
+                    250             AND #$<span class='n'>7F</span>        ; CLEAR CIO                     ; <a class='magic' name='_'>magic number</a> Why not ~<a class='e' href='#CIO'>CIO</a> ? Crappy tool (assembler)??
+                    251             ORA <a class='v' href='#IMBITS'>IMBITS</a>      ; OR WITH PREV IMBITS
+                    252             STA <a class='v' href='#IMBITS'>IMBITS</a>
+                    253             BNE <a class='x' href='#SP7'>SP7</a>         ; GO FOR NEXT
                     254 ;
-                    255             BEQ SERR2A      ;BRANCH ALWAYS
+                    255             BEQ <a class='x' href='#SERR2A'>SERR2A</a>      ;BRANCH ALWAYS
                     256 ;
 217A:20 80 21       257 <a class="f" name="CMDGO"  >CMDGO       </a>JSR <a class="x" href="#CMDGO1">CMDGO1</a>      ; CMDGO - EXECUTE COMMAND
 217D:4C 83 1F       258             JMP <a class="x" href="#CERTN">CERTN</a>
@@ -3037,7 +3037,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     055 <a class='e' name='R'      >R           </a>EQU $<span class='n'>04</span>         ; RECORD NUMBER ALLOWED
                     056 <a class='e' name='B'      >B           </a>EQU $<span class='n'>02</span>         ; BYTE NUMBER ALLOWED
                     057 <a class='e' name='ADR'    >ADR         </a>EQU $<span class='n'>01</span>         ; ADDRESS                       ; Can't use A due to crappy tools: assembler reserves <span class='code'>A</span> for implicit 6502 Accumulator such as <span class='code'>LSR A</span>
-                    058 <a class='e' name='CIO'    >CIO         </a>EQU $<span class='n'>80</span>         ; C,I, OR O ALLOWED
+                    058 <a class='e' name='CIO'    >CIO         </a>EQU $<span class='n'>80</span>         ; C,I, OR O ALLOWED             ; CIO = FLAG_CIO = $80 = minus, See <a class='e' href='#CIO'>CIO</a>, <a class='file' href='#CMDSCAN'>CMDSCAN</a>, Line #<a class='line' href='#CMDSCAN.204'>204</a>, and <a class='v' href='#OPTAB2'>OPTAB2</a>
                     059 ;
                     060 ; COMMAND SYNTAX TABLE
                     061 ; EACH COMMAND HAS TWO BYTE ENTRY 
@@ -3120,8 +3120,8 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     101 <a class='e' name='MI'       >MI          </a>EQU $<span class='n'>20</span>                                         ;    DFB 'R'+$80, R         ; <span class='todo'>TODO</span> does MI alias FN1? See <a class='x' href='#DRTNI'>DRTNI</a>
                     102 <a class='e' name='MO'       >MO          </a>EQU $<span class='n'>10</span>                                         ;    DFB 'B'+$80, B         ; <span class='todo'>TODO</span> does MO alias FN2? See <a class='x' href='#DRTNO'>DRTNO</a>
                     103 <a class='d' name='OPTAB2'   >OPTAB2      </a>EQU *                                           ;    DFB 'A'+$80, ADR
-294B:40 20 10 08                    104             DFB V,D,S,L                                     ;    DFB 'C'+$80, CIO+MC    ; <span class='todo'>TODO</span> Where is MC defined?
-294F:04 02 01 C0    105             DFB R,B,ADR,CIO+MC                              ;    DFB 'I'+$80, CIO+MI
+294B:40 20 10 08    104             DFB V,D,S,L                                     ;    DFB 'C'+$80, CIO+MC    ; MC was defined in <a class='file' href='#FDOSENT'>FDOSENT</a>, <a class='e' href='#MC'>MC</a>
+294F:04 02 01 C0    105             DFB R,B,ADR,CIO+MC                              ;    DFB 'I'+$80, CIO+MI    ; CIO = FLAG_CIO = $80 = minus, See <a class='e' href='#CIO'>CIO</a>, <a class='file' href='#CMDSCAN'>CMDSCAN</a>, Line #<a class='line' href='#CMDSCAN.204'>204</a>, and <a class='v' href='#OPTAB2'>OPTAB2</a>
 2953:A0 90          106             DFB CIO+MI,CIO+MO                               ;    DFB 'O'+$80, CIO+MO
                     107 <a class='d' name='OPTAB3'   >OPTAB3 </a>EQU *                                                ; /sarcasm Yay for more crappy table formatting
                                                                                     ;     [Min, Max]
@@ -3244,14 +3244,15 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 2A63:00             024 <a class="d" name="TEMP1A">TEMP1A      </a>DFB <span class='n'>0</span>
 2A64:00             025 <a class="d" name="TEMP2A">TEMP2A      </a>DFB <span class='n'>0</span>
 2A65:00             026 <a class="d" name="INOPTS">INOPTS      </a>DFB <span class='n'>0</span>           ; INPUT OPTIONS
-                    027 <a class="d" name="CUROPT">CUROPT      </a>EQU *           ; CURRENT OPTIONS               ; So we <i>can</i> type CUR ... but too lazy to type CUR_VOL, CUR_DRV, CUR_SLT??
-2A66:00 00          028 <a class="d" name="CV"    >CV          </a>DW <span class='n'>0</span>            ; VOLUME                        ; <a class='mem' name='_2A67'>wastes</a> 1 byte
-2A68:00 00          029 <a class="d" name="CD"    >CD          </a>DW <span class='n'>0</span>            ; DRIVE                         ; <a class='mem' name='_2A69'>wastes</a> 1 byte
-2A6A:00 00          030 <a class="d" name="CS"    >CS          </a>DW <span class='n'>0</span>            ; SLOT                          ; <a class='mem' name='_2A6B'>wastes</a> 1 byte /sarcasm Because <a class="x" href="#DBINIT">DBINIT</a> <a class="x" href="#OPNSUP">OPNSUP</a> need 2 bytes, right?
-2A6C:01 00          031 <a class="d" name="CL"    >CL          </a>DW <span class='n'>1</span>            ; RECORD LENGTH
-2A6E:00 00          032 <a class="d" name="CR"    >CR          </a>DW <span class='n'>0</span>            ; RECORD NUMBER
-2A70:00 00          033 <a class="d" name="CB"    >CB          </a>DW <span class='n'>0</span>            ; RECORD BYTE
-2A72:00 00          034 <a class="d" name="CA"    >CA          </a>DW <span class='n'>0</span>            ; ADDRESS                       ; $AA72:Address of last BLOAD
+                    027 <a class="d" name="CUROPT">CUROPT      </a>EQU *           ; CURRENT OPTIONS               ; /sarcasm So we <i>can</i> type CUR ... but too lazy to type CUR_VOL, CUR_DRV, CUR_SLT??
+                                                                                    ; <span class='note'>Note</span>: OPTAB3 and CUROPT must be keep in size sync! 
+2A66:00 00          028 <a class="d" name="CV"    >CV          </a>DW <span class='n'>0</span>            ; VOLUME                        ; [0] normally <a class='mem' name='_2A67'>wastes</a> 1 byte; all numbers 16-bit, See CMDSCAN, Line #<a class='line' href='#CMDSCAN.239'>239</a>
+2A68:00 00          029 <a class="d" name="CD"    >CD          </a>DW <span class='n'>0</span>            ; DRIVE                         ; [2] normally <a class='mem' name='_2A69'>wastes</a> 1 byte, all numbers 16-bit, See CMDSCAN, Line #<a class='line' href='#CMDSCAN.239'>239</a>
+2A6A:00 00          030 <a class="d" name="CS"    >CS          </a>DW <span class='n'>0</span>            ; SLOT                          ; [4] normally <a class='mem' name='_2A6B'>wastes</a> 1 byte, all numbers 16-bit, /sarcasm Because <a class="x" href="#DBINIT">DBINIT</a> <a class="x" href="#OPNSUP">OPNSUP</a> need 2 bytes, right?
+2A6C:01 00          031 <a class="d" name="CL"    >CL          </a>DW <span class='n'>1</span>            ; RECORD LENGTH                 ; [6]
+2A6E:00 00          032 <a class="d" name="CR"    >CR          </a>DW <span class='n'>0</span>            ; RECORD NUMBER                 ; [8]
+2A70:00 00          033 <a class="d" name="CB"    >CB          </a>DW <span class='n'>0</span>            ; RECORD BYTE                   ; [A]
+2A72:00 00          034 <a class="d" name="CA"    >CA          </a>DW <span class='n'>0</span>            ; ADDRESS                       ; [C] $AA72:Address of last BLOAD
 2A74:00             035 <a class="d" name="IMBITS">IMBITS      </a>DFB <span class='n'>0</span>                                           ; <span class='todo'>TODO</span>: Input Monitor Bits??? Used in <a class='x' href='#EMON'>EMON</a>
                     036             MSB ON                                          ; We can't <span class="macro">DS 30-5,$A0</span> ???
 2A75:C8 C5 CC CC    037 <a class="d" name="FNAME1">FNAME1      </a>ASC "HELLO                         " ; FILENAME 1"
